# chip8

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  Chip8.cpp  Chip8.h  common.h  main.cpp
tests/: 2048_bytes  4096_bytes  5000_bytes  CMakeLists.txt  Chip8.cpp  Chip8Test.cpp  CmakeLists.txt  Dumper.cpp  Dumper.h
